[package]
name = "png-msg"
version = "0.1.0"
edition = "2021"
authors = [ "Anshul Raman" ]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.19", features = ["derive"] }
crc = "3.0.0"
